	  do_indent_marked(), do_indent_marked_void(), and
	  do_unindent_marked_void(); changes to shortcut_init(). (Chris
	  and DLR)
	- Add the ability to move to the first and last line of the help
	  text and the first and last file in the file browser via
	  Meta-\ (Meta-|) and Meta-/ (Meta-?).  Changes to do_browser(),
	  shortcut_init(), and do_help(). (DLR)
- browser.c:
  do_browser()
	- Reference NANO_GOTODIR_(ALT|F)?KEY instead of
	  NANO_GOTOLINE_(ALT|F)?KEY for the "Go to Directory" shortcut.
	  (DLR)
  parse_browser_input()
	- Remove redundant key checks. (DLR)
  browser_refresh()
	- Rename variable editline to line, for consistency. (DLR)
	- Change variable i from an int to a size_t in order to match
	  selected, which it's compared against. (DLR)
- files.c:
  open_file()
	- Remove redundant wording in the error message when we try to
	  open a device file. (DLR)
  safe_tempfile()
	- Don't ignore $TMPDIR if it's set but blank, for consistency.
	  (DLR)
  write_file()
	- Don't free backupname before displaying it in a statusbar error
	  message. (DLR, found by Bill Marcum)
	- If we can't save the backup file for some reason, at least
	  save the original file, if possible, since that's better than
	  saving nothing. (DLR, problem found by Bill Marcum, solution
	  suggested by Jordi)
	- Clarify the error messages when creating a temporary file or
	  writing one for prepending fails. (DLR)
	- Simplify the routine for closing the file just before we
	  indicate success on the statusbar. (DLR)
- global.c:
  shortcut_init()
	- Change the cursor position display help text to use "display"
	  instead of "show", for consistency. (DLR)
	- In the main shortcut list, move the "Refresh" shortcut down to
	  after the "Enter" shortcut, for consistency. (DLR)
	- Add the ability to move to the first and last line of the
	  current file from the main list via Meta-\ (Meta-|) and Meta-/
	  (Meta-?).  Also, make sure all the equivalent shortcuts in the